@@ -1,4 +1,4 @@
-/* $Id: display.c,v 1.20 2002/03/09 18:07:31 ukai Exp $ */
+/* $Id: display.c,v 1.21 2002/03/10 15:55:15 ukai Exp $ */
 #include <signal.h>
 #include "fm.h"
 
@@ -303,7 +303,6 @@ displayBuffer(Buffer *buf, int mode)
 
 #ifdef USE_IMAGE
     if (buf->need_reshape) {
-	buf->need_reshape = 0;
 	displayBuffer(buf, B_FORCE_REDRAW);
 	return;
     }
