@@ -1,3 +1,9 @@
+2002-03-11  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03106] Re: displayBuffer
+	* display.c (displayBuffer): revert previous changes
+	* file.c (process_img): remove space in src attribute
+
 2002-03-10  Rei FURUKAWA <furukawa@tcp-ip.or.jp>
 
 	* [w3m-dev 03096] displayBuffer 
@@ -3107,4 +3113,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.341 2002/03/09 18:07:31 ukai Exp $
+$Id: ChangeLog,v 1.342 2002/03/10 15:55:15 ukai Exp $
